д/з №20 общая оптимизация структуры программы, добавление конвертера xml-to-json